--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetHoaDonByMa.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetHoaDonByMa.cshtml
@@ -24,6 +24,7 @@
 
 <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 <style>
+
     body {
         font-family: 'Arial', sans-serif;
         background-color: #f8f9fa;
@@ -112,6 +113,7 @@
             margin: 20px 0;
         }
 </style>
+<link rel="stylesheet" href="~/css/hoadonbyma.css" />
 <!-- Thêm jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <!-- Thêm Bootstrap JS -->
@@ -222,15 +224,17 @@
                 <button class="btn btn-primary" id="btn_HoanThanh"> Hoàn thành</button>
             </div>
         }
-       
+       <div class="col-md-2">
+            <button class="btn btn-outline-primary" id="btn_inphieu">
+                 <i class="fa-solid fa-print fa-xl"></i> In phiếu
+            </button>
+        </div>
         @if (Model.TrangThai == 1 || Model.TrangThai == 2 || Model.TrangThai == 3)
         {
             <div class="col-md-2">
                 <button class="btn btn-danger" id="btn_huydon"> Hủy đơn</button>
             </div>
-            @* <div class="col-md-2">
-                <button class="btn btn-danger" id="btn_inphieu"> In phiếu giao hàng</button>
-            </div> *@
+            
         }
         @if (Model.PhanLoai == "1")
         {
@@ -252,6 +256,7 @@
 
             }
         }
+        
    </div>
 
     </div>
@@ -391,7 +396,7 @@
                     }
                     @if (Model.PhuongThucThanhToan == 3)
                     {
-                        <p>Thập cẩm</p>
+                        <p>Chuyển khoản + Tiền mặt</p>
                     }
                     @if (Model.PhuongThucThanhToan == 4)
                     {
@@ -450,6 +455,7 @@
         <p><strong>Địa chỉ giao hàng: </strong> @Model.TinhThanh - @Model.QuanHuyen - @Model.XaPhuong - @Model.Cuthe</p>
         <p><strong>Ghi chú: </strong>@Model.Ghichu</p>
     <hr />
+        <input style="display:none" id="btn_diachi" value="@Model.TinhThanh - @Model.QuanHuyen - @Model.XaPhuong - @Model.Cuthe" />
 </div>
 <div>
     <h4>Thanh toán</h4>
@@ -912,7 +918,8 @@
         </div>
     </div>
 </div>
-
+<div id="printableTable">
+</div>
 <div style="display:none">
     <input id="btn_TongGiaTriHangHoa_fake" />
     <input id="btn_ma_fake" />
