--- a/HN120_ShopQuanAo.View/wwwroot/css/hoadon.css
+++ b/HN120_ShopQuanAo.View/wwwroot/css/hoadon.css
@@ -1,6 +1,7 @@
-﻿#printableTable {
+﻿﻿#printableTable {
     display: none;
 }
+
 @media print {
     body * {
         visibility: hidden;
@@ -20,7 +21,7 @@
         overflow: visible;
         page-break-inside: avoid;
         display: table;
-        margin-left:70px;
+        margin-left: 50px;
     }
 
     @page {
@@ -31,25 +32,25 @@
         page-break-after: avoid;
         page-break-inside: avoid;
     }
+
     .shop-info {
         width: 90%; /* Full width of the table */
         text-align: left;
-        margin-top: 20px;
+     /* //  margin-top: 20px;*/
         margin-left: 10px;
         border-top: 1px solid #000;
         padding-top: 10px;
         box-sizing: border-box; /* Ensures padding and border are included in the width */
         position: relative;
     }
+
     .logo {
         display: block;
         margin: 0 auto 20px auto; /* Căn giữa ảnh và thêm khoảng cách dưới cùng */
         max-width: 100%; /* Đảm bảo ảnh không lớn hơn chiều rộng của bảng */
-        height: auto; /* Duy trì tỷ lệ khung hình của ảnh */
-       
+        height: 20px; /* Duy trì tỷ lệ khung hình của ảnh */
     }
 }
-/* Điều chỉnh màu chữ và font chữ */
 body {
     font-family: Arial, sans-serif;
     color: #333;
