--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/DetailSanPham.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/DetailSanPham.cshtml
@@ -351,10 +351,10 @@ else
                     @item.SoLuongTon
                 </td>
                 <td>
-                    <button id="totalsoluong" data-madg="@item.DonGia" data-mamau="@item.MaMau" data-masize="@item.MaSize" data-soluong="@item.SoLuongTon"></button>
+                    <button id="totalsoluong" data-madg="@item.GiaBan" data-mamau="@item.MaMau" data-masize="@item.MaSize" data-soluong="@item.SoLuongTon"></button>
                 </td>
                 <td>
-                    @item.DonGia
+                    @item.GiaBan
                 </td>
 
             </tr>
