--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutVoucherCustomer.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutVoucherCustomer.cshtml
@@ -66,7 +66,7 @@
                                         <li><a href="wishlist.html" title="wishlist">My wishlist</a></li>
                                         <li><a href="my-account.html" title="My account">My account</a></li>
                                         <li><a href="cart.html" title="My cart">My cart</a></li>
-                                        <li><a href="login.html" title="Login">Login</a></li>
+                                        <li><a href="login.html" title="Login">Hello</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -134,7 +134,6 @@
                                         </div>
                                         <!--mini cart end-->
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -494,7 +493,7 @@
                                 <ul>
                                     <li><a href="index.html">home</a></li>
                                     <li><i class="fa fa-angle-right"></i></li>
-                                    <li>Shopping Cart</li>
+                                    <li>Kho Voucher ngày khuyến mãi đặc biệt</li>
                                 </ul>
 
                             </div>
