--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/Checkout.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/CustomerHome/Checkout.cshtml
@@ -6,6 +6,7 @@
     decimal? tongtienhang = ViewBag.TongTienHang as decimal?;
     decimal? tongdonhang = ViewBag.TongHoaDon as decimal?;
     var lstGHCT = ViewBag.JoinDataGH as List<GioHangChiTietView>;
+    var lstUVC = ViewBag.lstUVC as List<VoucherUserView>;
 }
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/css/bootstrap.min.css" integrity="sha512-b2QcS5SsA8tZodcDtGRELiGv5SaKSk1vDHDaQRda0htPYWZ6046lr3kJ5bAAQdpV2mmA/4v0wQF9MyU6/pDIAg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -143,27 +144,17 @@
                         <div class="voucher-container">
                             <h1>Chọn Voucher của Bạn</h1>
                             <div class="voucher-list">
-                                <div class="voucher-card">
-                                    <div class="voucher-info">
-                                        <h2>Giảm 10%</h2>
-                                        <p>Dành cho đơn hàng từ 500.000 VND</p>
+                                @foreach(var item in lstUVC)
+                                {
+                                    <div class="voucher-card">
+                                        <div class="voucher-info">
+                                            <h2>@item.TenVoucher</h2>
+                                            <p>Dành cho đơn hàng từ @item.DonGiaToiThieu VND (tối đa @item.GiamGiaToiDa VNĐ)</p>
+                                        </div>
+                                        <button class="select-voucher-btn">Áp Dụng</button>
                                     </div>
-                                    <button class="select-voucher-btn">Chọn Voucher</button>
-                                </div>
-                                <div class="voucher-card">
-                                    <div class="voucher-info">
-                                        <h2>Giảm 20%</h2>
-                                        <p>Dành cho đơn hàng từ 1.000.000 VND</p>
-                                    </div>
-                                    <button class="select-voucher-btn">Chọn Voucher</button>
-                                </div>
-                                <div class="voucher-card">
-                                    <div class="voucher-info">
-                                        <h2>Miễn phí vận chuyển</h2>
-                                        <p>Áp dụng cho mọi đơn hàng</p>
-                                    </div>
-                                    <button class="select-voucher-btn">Chọn Voucher</button>
-                                </div>
+                                }
+
                             </div>
                         </div>
                     </div>
