hiep update code lay vouche cho nguoi dung

--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutDetail.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutDetail.cshtml
@@ -177,7 +177,7 @@
                                                     </div>
                                                 </li>
                                                 <li>
-                                                    <a href="#">women</a>
+                                                    <a asp-action="khuyenmai" asp-controller="Voucher" asp-area="Customer">Khuyến Mãi</a>
                                                     <div class="mega_menu">
                                                         <div class="mega_top fix">
                                                             <div class="mega_items">
