--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutCartCustomer.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Shared/_LayoutCartCustomer.cshtml
@@ -345,7 +345,7 @@
                                                     </div>
                                                 </li>
                                                 <li>
-                                                    <a href="#">women</a>
+                                                    <a asp-action="khuyenmai" asp-controller="Voucher" asp-area="Customer">Khuyến Mãi</a>
                                                     <div>
                                                         <div>
                                                             <div>
