--- a/HN120_ShopQuanAo.View/Areas/Customer/Views/Voucher/khuyenmai.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Customer/Views/Voucher/khuyenmai.cshtml
@@ -1,12 +1,12 @@
 ﻿@using HN120_ShopQuanAo.Data.Models;
 @{
-	Layout = "~/Areas/Customer/Views/Shared/_LayoutVoucherCustomer.cshtml";
-	List<Voucher> lstvc = ViewBag.lstVoucher as List<Voucher>;
+    Layout = "~/Areas/Customer/Views/Shared/_LayoutVoucherCustomer.cshtml";
+    List<Voucher> lstvc = ViewBag.lstVoucher as List<Voucher>;
 }
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 <style>
-    body {
+    .body {
         font-family: Arial, sans-serif;
         background-color: #f9f9f9;
         margin: 0;
@@ -77,24 +77,27 @@
             background-color: #c0392b;
         }
 </style>
-<h1>Hãy Lấy Voucher về ngay nào !!!</h1>
-@if(lstvc == null){
-	<h3>Có lỗi sảy ra khi lấy dữ liệu voucher</h3>
+<center><h1 style="color:red">Hãy Lấy Voucher về ngay nào !!!</h1></center>
+@if (lstvc == null)
+{
+    <h3>Có lỗi sảy ra khi lấy dữ liệu voucher</h3>
 }
-<h1>Chọn Voucher của Bạn</h1>
-<div class="voucher-container">
 
-    <div class="voucher-list">
-        @foreach (var item in lstvc)
-        {
-            <div class="voucher-card">
-                <div class="voucher-info">
-                    <h2>@item.Ten</h2>
-                    <p>Dành cho đơn hàng từ @item.GiaGiamToiThieu VND</p>
+<div class="body">
+    <div class="voucher-container">
+
+        <div class="voucher-list">
+            @foreach (var item in lstvc)
+            {
+                <div class="voucher-card">
+                    <div class="voucher-info">
+                        <h2>@item.Ten</h2>
+                        <p>Dành cho đơn hàng từ @item.GiaGiamToiThieu VND</p>
+                    </div>
+                    <a class="select-voucher-btn" asp-action="layvouchervekho" asp-controller="Voucher" asp-area="Customer" asp-route-mavc="@item.MaVoucher">Lấy về</a>
                 </div>
-                <button class="select-voucher-btn" asp-action="layvouchervekho" asp-controller="Voucher" asp-area="Customer">Lấy về</button>
-            </div>
-        }
+            }
+        </div>
     </div>
 </div>
 
